<resources>
    <string name="app_name">AllInOne  Predictions</string>
    <string name="action_settings">Settings</string>

    <string name="butn1"> Daily Football Picks</string>
    <string name="butn2">Jackpot Guide</string>
    <string name="butn3"> Handball Picks</string>
    <string name="butn4"> Basketball Picks</string>
    <string name="butn5"> Ice Hockey Picks</string>
    <string name="butn6"> Tennis Picks</string>

    <string name="_23_june">date</string>
    <string name="post">post</string>
    <string name="post_time">time</string>
    <string name="about">About app</string>
    <string name="terms">Terms of Use</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="submit_feedback">Submit</string>
    <string name="your_email_address">Email Address</string>
    <string name="message">Message to admin</string>
    <string name="menu_policy">Privacy Policy</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_rate">Rate Us </string>
    <string name="banner_real">ca-app-pub-4759125171158565/4957039639</string>
    <string name="interstitial_real"> ca-app-pub-4759125171158565/8197446499 </string>

    <string name="banner_testad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_test">ca-app-pub-3940256099942544/1033173712</string>

</resources>
