<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    app:ignore="NamespaceTypo">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="#c0c0c0" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imagesport"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/inappicon"

        />


    <Button
        android:id="@+id/butn1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagesport"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"


        android:text="@string/butn1"
         />

    <Button

        android:id="@+id/butn2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"

        android:text="@string/butn2" />

    <Button

        android:id="@+id/butn3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"

        android:text="@string/butn3" />
    <Button

        android:id="@+id/butn4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butn3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"

        android:text="@string/butn4" />

    <Button

        android:id="@+id/butn6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butn4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"

        android:text="@string/butn6" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/adViewhome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>